--- a/src/scripts/components/ui/Menu/Menu.scss
+++ b/src/scripts/components/ui/Menu/Menu.scss
@@ -22,18 +22,18 @@ nav {
   }
 
   .heading {
-    font-weight: bold;
     font-size: 26px;
   }
 
   .selected {
-    text-decoration: underline;
+    font-weight: bold;
   }
 }
 
 .sub-items {
   overflow: hidden;
-  animation: appear .1s ease-in forwards;
+  white-space: nowrap;
+  animation: appear .2s ease-in forwards;
   position: absolute;
   line-height: 34px;
   padding: 30px 20px 20px 20px;
@@ -42,13 +42,16 @@ nav {
 @keyframes appear {
   0% {
     width: 0;
+    height: 0;
   }
 
   90% {
     width: 100px;
+    height: 100px;
   }
 
   100% {
     width: auto;
+    height: auto;
   }
 }
