--- a/src/scripts/components/ui/Pagination/Pagination.scss
+++ b/src/scripts/components/ui/Pagination/Pagination.scss
@@ -1,14 +1,35 @@
 .slides {
   display: flex;
-  border: 1px solid black;
   height: 270px;
   overflow-x: scroll;
-  width: 600px;
-  margin: 0 auto;
+  margin: 0 70px;
+}
+
+option {
+  font-size: 20px;
 }
 
 .card {
-  background-color: greenyellow;
-  min-width: 300px;
+  min-width: 350px;
   margin: 30px;
+}
+
+.option1,
+.card1 {
+  background: red;
+}
+
+.option2,
+.card2 {
+  background: green;
+}
+
+.option3,
+.card3 {
+  background: blue;
+}
+
+.option4,
+.card4 {
+  background: pink;
 }
