--- a/src/scripts/components/ui/CardEnlarge/CardEnlarge.scss
+++ b/src/scripts/components/ui/CardEnlarge/CardEnlarge.scss
@@ -1,11 +1,11 @@
 @import 'styles/variables.scss';
 
 .card {
-  background: $primaryLight;
+  background: $secondary;
   color: $primary;
   padding: 30px;
   margin: 0 auto;
-  border-radius: 10px;
+  border-radius: 6px;
 }
 
 .no {
