--- a/src/scripts/components/ui/Menu/Menu.scss
+++ b/src/scripts/components/ui/Menu/Menu.scss
@@ -7,8 +7,8 @@ nav {
 
 .menu-items,
 .sub-items {
-  background: $primaryLight;
-  border-radius: 8px;
+  background: $secondary;
+  border-radius: 6px;
 }
 
 .menu-items {
