--- a/src/scripts/components/ui/Progress/Progress.scss
+++ b/src/scripts/components/ui/Progress/Progress.scss
@@ -3,13 +3,13 @@
 
 .success {
   .ending-msg {
-    color: $success;
+    color: $green;
   }
 }
 
 .failure {
   .ending-msg {
-    color: $failure;
+    color: $red;
   }
 }
 
