--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,6 @@
-$primary: #3d405b;
-$primaryLight: #eff1ff;
+$primary: #3D405B;
+$secondary: #F4F1DE;
+$tertiary: #F2CC8F;
 
-$success: #72a78d;
-$failure: #e07a5f;
-$failureDark: #d16445;
+$green: #81B29A;
+$red: #E07A5F;
