--- a/src/scripts/components/ui/ItemSelection/ItemSelection.scss
+++ b/src/scripts/components/ui/ItemSelection/ItemSelection.scss
@@ -1,13 +1,13 @@
 @import 'styles/variables.scss';
 
 .card {
-  background: $primaryLight;
+  background: $secondary;
   color: $primary;
   padding: 30px;
   margin: 0 auto;
   width: 300px;
   height: 400px;
-  border-radius: 10px;
+  border-radius: 6px;
 }
 
 .notLifted {
