--- a/src/scripts/components/ui/CardEnlarge/CardEnlarge.scss
+++ b/src/scripts/components/ui/CardEnlarge/CardEnlarge.scss
@@ -30,7 +30,7 @@ article {
 }
 
 .yes {
-  animation: open .4s ease-in forwards;
+  animation: open .2s ease-in forwards;
 
   .close {
     font-size: 24px;
@@ -51,12 +51,12 @@ article {
 @keyframes open {
   0% {
     width: 300px;
-    height: 270px;
+    height: 417px;
   }
 
   30% {
-    width: auto;
-    height: 270px;
+    width: 300px;
+    height: 542px;
   }
 
   100% {
