--- a/src/scripts/components/ui/Shake/Shake.scss
+++ b/src/scripts/components/ui/Shake/Shake.scss
@@ -34,7 +34,7 @@
 .submit {
   border-top-right-radius: 6px;
   border-bottom-right-radius: 6px;
-  color: $secondary;
+  color: white;
   background: $primary;
   font-weight: bold;
   font-size: 18px;
