--- a/src/scripts/components/ui/CardEnlarge/CardEnlarge.scss
+++ b/src/scripts/components/ui/CardEnlarge/CardEnlarge.scss
@@ -1,7 +1,7 @@
 @import 'styles/variables.scss';
 
 .card,
-.close {
+.shrink-button {
   color: $red;
 }
 
@@ -13,54 +13,83 @@ article {
 .card {
   background: $secondary;
   padding: 30px;
-  border-radius: 6px;
+
+  .heading {
+    display: flex;
+    justify-content: space-between;
+  
+    h2 {
+      margin: 0;
+    }
+  }
 
   a {
     color: $primary;
   }
 }
 
-.no {
-  width: 300px;
+.closed {
+  max-width: 30%;
+  // height: 40%;
   cursor: pointer;
+  border-radius: 6px;
 
   article {
-    height: 270px;
+    height: 278px;
   }
 }
 
-.yes {
-  animation: open .2s ease-in forwards;
+.opened {
+  animation: enlargeCard 3s cubic-bezier(.57,.57,.29,1.01) forwards;
+  // animation-timing-function: cubic-bezier(.3,.29,.52,1);
 
-  .close {
+  .shrink-button {
     font-size: 24px;
     background: transparent;
     border: 0;
   }
+
+  // article {
+  //   animation: enlargeArticle 1s forwards;
+  // }
 }
 
-.heading {
-  display: flex;
-  justify-content: space-between;
-
-  h2 {
-    margin: 0;
-  }
-}
-
-@keyframes open {
+@keyframes enlargeCard {
   0% {
-    width: 300px;
-    height: 417px;
+    max-width: 30%;
+    // height: 40%;
   }
 
-  30% {
-    width: 300px;
-    height: 542px;
+  // 30% {
+  //   max-width: 50%;
+  //   // height: 50%;
+  // }
+
+  70% {
+    max-width: 99%;
+    // height: 70%;
   }
 
   100% {
-    width: auto;
-    height: 100vh;
+    max-width: auto;
+    // height: 100vh;
   }
 }
+
+// @keyframes enlargeArticle {
+//   0% {
+//     height: 40%;
+//   }
+
+//   30% {
+//     height: 50%;
+//   }
+
+//   70% {
+//     height: 70%;
+//   }
+
+//   100% {
+//     height: 100%;
+//   }
+// }
