--- a/src/scripts/components/ui/CardEnlarge/CardEnlarge.scss
+++ b/src/scripts/components/ui/CardEnlarge/CardEnlarge.scss
@@ -30,7 +30,7 @@ article {
 
 .closed {
   max-width: 30%;
-  // height: 40%;
+  max-height: 40%;
   cursor: pointer;
   border-radius: 6px;
 
@@ -40,7 +40,7 @@ article {
 }
 
 .opened {
-  animation: enlargeCard 3s cubic-bezier(.57,.57,.29,1.01) forwards;
+  animation: enlargeCard .5s cubic-bezier(.57,.57,.29,1.01) forwards;
   // animation-timing-function: cubic-bezier(.3,.29,.52,1);
 
   .shrink-button {
@@ -49,30 +49,30 @@ article {
     border: 0;
   }
 
-  // article {
-  //   animation: enlargeArticle 1s forwards;
-  // }
+  article {
+    animation: enlargeArticle .5s forwards;
+  }
 }
 
 @keyframes enlargeCard {
   0% {
     max-width: 30%;
-    // height: 40%;
+    max-height: 40%;
   }
 
-  // 30% {
-  //   max-width: 50%;
-  //   // height: 50%;
-  // }
+  30% {
+    max-width: 50%;
+    max-height: 50%;
+  }
 
   70% {
     max-width: 99%;
-    // height: 70%;
+    max-height: 70%;
   }
 
   100% {
-    max-width: auto;
-    // height: 100vh;
+    max-width: 100%;
+    max-height: 100vh;
   }
 }
 
