--- a/src/scripts/components/ui/CardEnlarge/CardEnlarge.scss
+++ b/src/scripts/components/ui/CardEnlarge/CardEnlarge.scss
@@ -26,22 +26,26 @@ article {
   a {
     color: $primary;
   }
+
+  aside {
+    font-size: 12px;
+  }
 }
 
 .closed {
-  max-width: 30%;
-  max-height: 40%;
-  cursor: pointer;
+  max-width: 300px;
+  // height: 40%;
+  height: 500px;
   border-radius: 6px;
 
   article {
-    height: 278px;
+    // height: 278px;
+    height: 80%;
   }
 }
 
 .opened {
-  animation: enlargeCard .5s cubic-bezier(.57,.57,.29,1.01) forwards;
-  // animation-timing-function: cubic-bezier(.3,.29,.52,1);
+  animation: enlargeCard 1s cubic-bezier(.57,.57,.29,1.01) forwards;
 
   .shrink-button {
     font-size: 24px;
@@ -49,30 +53,32 @@ article {
     border: 0;
   }
 
-  article {
-    animation: enlargeArticle .5s forwards;
-  }
+  // article {
+  //   animation: enlargeArticle 3s forwards;
+  // }
 }
 
 @keyframes enlargeCard {
   0% {
-    max-width: 30%;
-    max-height: 40%;
+    // max-width: 30%;
+    // height: 40%;
+    max-width: 300px;
+    height: 500px;
   }
 
   30% {
-    max-width: 50%;
-    max-height: 50%;
+    // max-width: 50%;
+    // height: 50%;
   }
 
   70% {
-    max-width: 99%;
-    max-height: 70%;
+    // max-width: 99%;
+    // height: 70%;
   }
 
   100% {
     max-width: 100%;
-    max-height: 100vh;
+    height: 100vh;
   }
 }
 
