--- a/src/scripts/components/ui/CardEnlarge/CardEnlarge.scss
+++ b/src/scripts/components/ui/CardEnlarge/CardEnlarge.scss
@@ -5,14 +5,18 @@
   color: $red;
 }
 
-.card,
-article {
+.closed {
   overflow: hidden;
+}
+
+.opened {
+  overflow: scroll;
 }
 
 .card {
   background: $secondary;
   padding: 30px;
+  box-sizing: border-box;
 
   .heading {
     display: flex;
@@ -30,72 +34,49 @@ article {
   aside {
     font-size: 12px;
   }
-}
 
-.closed {
-  max-width: 300px;
-  // height: 40%;
-  height: 500px;
-  border-radius: 6px;
+  .expand {
+    padding: 8px;
+    background: $red;
+    border-radius: 6px;
+    border: 0;
+    color: $secondary;
 
-  article {
-    // height: 278px;
-    height: 80%;
+    &:focus {
+      outline-style: dotted;
+      outline-width: thin;
+      outline-offset: 3px;
+      outline-color: $red;
+    }
   }
 }
 
+.closed {
+  // max-width and height must be the same as 
+  // 'from' rule in enlargeCard keyframe
+  max-width: 350px;
+  height: 480px;
+  border-radius: 6px;
+}
+
 .opened {
-  animation: enlargeCard 1s cubic-bezier(.57,.57,.29,1.01) forwards;
+  animation: enlargeCard .5s cubic-bezier(.35,.78,.37,1) forwards;
 
   .shrink-button {
     font-size: 24px;
     background: transparent;
     border: 0;
   }
-
-  // article {
-  //   animation: enlargeArticle 3s forwards;
-  // }
 }
 
 @keyframes enlargeCard {
-  0% {
-    // max-width: 30%;
-    // height: 40%;
-    max-width: 300px;
-    height: 500px;
+  from {
+    max-width: 350px;
+    height: 480px;
   }
 
-  30% {
-    // max-width: 50%;
-    // height: 50%;
-  }
-
-  70% {
-    // max-width: 99%;
-    // height: 70%;
-  }
-
-  100% {
+  to {
     max-width: 100%;
     height: 100vh;
   }
 }
-
-// @keyframes enlargeArticle {
-//   0% {
-//     height: 40%;
-//   }
-
-//   30% {
-//     height: 50%;
-//   }
-
-//   70% {
-//     height: 70%;
-//   }
-
-//   100% {
-//     height: 100%;
-//   }
-// }
