not perfect, but at this point I need to ship

--- a/src/scripts/components/ui/Menu/Menu.scss
+++ b/src/scripts/components/ui/Menu/Menu.scss
@@ -16,13 +16,13 @@
     list-style-type: none;
   }
 
-  .heading, 
+  .dropdown, 
   .level-two-heading {
     text-decoration: underline;
     cursor: pointer;
   }
 
-  .heading {
+  .dropdown {
     font-size: 22px;
   }
 }
