--- a/src/scripts/components/ui/Loading/Loading.scss
+++ b/src/scripts/components/ui/Loading/Loading.scss
@@ -1,39 +1,43 @@
 @import 'styles/index.scss';
 @import 'styles/variables.scss';
 
-.success,
-.failure {
-  font-size: 20px;
-}
-
-.success {
-  color: $green;
-}
-
-.failure {
-   color: $red;
-}
-
-.spinner {
-  transform: rotate(-90deg);
-  width: 60px;
-  height: 60px;
-
-  .circle {
-    stroke-linecap: round;
-    stroke-dasharray: 360;
-    stroke-width: 6;
-    stroke: $primary;
-    fill: transparent;
-    animation: spin .6s ease-in-out 0s normal infinite;
+.spinner-container {
+  .success,
+  .failure {
+    font-size: 20px;
+  }
+  
+  .success {
+    color: $green;
+  }
+  
+  .failure {
+     color: $red;
+  }
+  
+  .spinner {
+    transform: rotate(-90deg);
+    width: 60px;
+    height: 60px;
+  
+    .circle {
+      stroke-linecap: round;
+      stroke-dasharray: 360;
+      stroke-width: 6;
+      stroke: $primary;
+      fill: transparent;
+      animation: spin .6s ease-in-out 0s normal infinite;
+    }
+  }
+  
+  @keyframes spin {
+    from {
+      stroke-dashoffset: 360;
+    }
+    to {
+      stroke-dashoffset: 40;
+    }
   }
 }
 
-@keyframes spin {
-  from {
-    stroke-dashoffset: 360;
-  }
-  to {
-    stroke-dashoffset: 40;
-  }
-}
+
