--- a/src/scripts/components/ui/Range/Range.scss
+++ b/src/scripts/components/ui/Range/Range.scss
@@ -2,40 +2,47 @@
 
 .range {
   margin: 40px;
-}
 
-.range-input {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 400px; 
-  height: 20px;
-  background: $green;
-  border-radius: 8px;
-
-  &::-webkit-slider-thumb {
+  label {
+    color: $green;
+  }
+  
+  .range-input {
     -webkit-appearance: none;
     appearance: none;
-    border-radius: 50%;
-    height: 60px;
-    width: 60px;
-    background: $secondary;
-    cursor: pointer;
-    border: 12px solid $green;
-
-    &:hover { 
-      transform: scale(1.2);
-      transition: ease-in-out .2s;
+    width: 400px; 
+    height: 20px;
+    background: $green;
+    border-radius: 8px;
+    display: block;
+    margin-top: 40px;
+  
+    &::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none;
+      border-radius: 50%;
+      height: 60px;
+      width: 60px;
+      background: $secondary;
+      cursor: pointer;
+      border: 12px solid $green;
+  
+      &:hover { 
+        transform: scale(1.2);
+        transition: ease-in-out .2s;
+      }
+    }
+  
+    &:focus {
+      outline-offset: 8px;
+      outline-style: dashed;
+      outline-color: $green;
     }
   }
-
-  &:focus {
-    outline-offset: 8px;
-    outline-style: dashed;
-    outline-color: $green;
+  
+  .value {
+    font-size: 50px;
+    color: $green;
   }
 }
 
-.value {
-  font-size: 50px;
-  color: $green;
-}
