--- a/src/scripts/components/Range/Range.scss
+++ b/src/scripts/components/Range/Range.scss
@@ -16,6 +16,21 @@
     border-radius: 8px;
     display: block;
     margin-top: 40px;
+
+    &::-moz-range-thumb {
+      appearance: none;
+      border-radius: 50%;
+      height: 30px;
+      width: 30px;
+      background: $secondary;
+      cursor: pointer;
+      border: 12px solid $green;
+
+      &:hover { 
+        transform: scale(1.2);
+        transition: ease-in-out .2s;
+      }
+    }
   
     &::-webkit-slider-thumb {
       -webkit-appearance: none;
